demo: fix for horizontal scrollbar in the docs
match the nevgative margin on the header.title div with the padding on its container row - fixes "demo site has the horizonal scrollbar" mentioned on #3899

--- a/demo/src/style/app.scss
+++ b/demo/src/style/app.scss
@@ -72,8 +72,8 @@ header.navbar {
 }
 
 header.title {
-  margin-left: -15px;
-  margin-right: -15px;
+  margin-left: -12px;
+  margin-right: -12px;
   position: relative;
 
   .content-tabset {
